--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,6 +14,9 @@ include_directories(${PCL_INCLUDE_DIRS})
 include_directories(/usr/include/eigen3)
 include_directories(include)
 
+add_executable(mask_view src/mask_view.cpp)
+target_link_libraries(mask_view ${OpenCV_LIBRARIES} ${PCL_LIBRARIES})
+
 add_executable(mask_fusion src/mask_fusion.cpp)
 target_link_libraries(mask_fusion ${OpenCV_LIBRARIES} ${OCTOMAP_LIBRARIES} ${PCL_LIBRARIES})
 
