--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,5 +20,8 @@ target_link_libraries(mask_view ${OpenCV_LIBRARIES} ${PCL_LIBRARIES})
 add_executable(mask_fusion src/mask_fusion.cpp)
 target_link_libraries(mask_fusion ${OpenCV_LIBRARIES} ${OCTOMAP_LIBRARIES} ${PCL_LIBRARIES})
 
+add_executable(label_view src/label_view.cpp)
+target_link_libraries(label_view ${OpenCV_LIBRARIES} ${PCL_LIBRARIES})
+
 add_executable(label_fusion src/label_fusion.cpp)
 target_link_libraries(label_fusion ${OpenCV_LIBRARIES} ${OCTOMAP_LIBRARIES} ${PCL_LIBRARIES})
