--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,8 @@ compiler:
   - clang
   - gcc
 
+cache: ccache
+
 install:
   - sudo pip install cpplint
   - sudo sh -c 'echo "deb http://packages.ros.org/ros/ubuntu $(lsb_release -sc) main" > /etc/apt/sources.list.d/ros-latest.list'
